user services buttons done

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,7 +69,9 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="10dp"
         android:onClick="LoginUser"
-        android:text="Login" />
+        android:text="Login"
+        app:icon="@drawable/baseline_login_24"
+        app:iconSize="25dp" />
 
 
     <TextView
