--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -16,7 +16,7 @@
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginTop="50dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="5dp"
         android:layout_height="wrap_content" />
 
     <LinearLayout
@@ -28,7 +28,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:padding="10dp"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -93,7 +92,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:padding="10dp"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -158,7 +156,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:padding="10dp"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -171,7 +168,7 @@
                     android:layout_width="130dp"
                     android:layout_height="130dp"
                     android:layout_marginRight="25dp"
-                    app:icon="@drawable/twotone_precision_manufacturing_24"
+                    app:icon="@drawable/twotone_monetization_on_24"
                     app:iconGravity="textStart"
                     app:iconSize="60dp" />
 
@@ -179,7 +176,7 @@
                     android:id="@+id/textView200"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Meter repair request" />
+                    android:text="Bills inquiry" />
             </LinearLayout>
 
             <LinearLayout
@@ -191,12 +188,76 @@
                     android:id="@+id/button201"
                     android:layout_width="130dp"
                     android:layout_height="130dp"
-                    app:icon="@drawable/twotone_group_24"
+                    app:icon="@drawable/twotone_fact_check_24"
                     app:iconGravity="textStart"
                     app:iconSize="60dp" />
 
                 <TextView
                     android:id="@+id/textView201"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Requests istatus" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+        </LinearLayout>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/button300"
+                    android:layout_width="130dp"
+                    android:layout_height="130dp"
+                    android:layout_marginRight="25dp"
+                    app:icon="@drawable/twotone_precision_manufacturing_24"
+                    app:iconGravity="textStart"
+                    app:iconSize="60dp" />
+
+                <TextView
+                    android:id="@+id/textView300"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Meter repair request" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/button301"
+                    android:layout_width="130dp"
+                    android:layout_height="130dp"
+                    app:icon="@drawable/twotone_group_24"
+                    app:iconGravity="textStart"
+                    app:iconSize="60dp" />
+
+                <TextView
+                    android:id="@+id/textView301"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
