--- a/app/src/main/res/layout/activity_attach_subscriptions.xml
+++ b/app/src/main/res/layout/activity_attach_subscriptions.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context=".AttachSubscriptions">
 
@@ -11,20 +11,167 @@
         android:id="@+id/tvAttachWelcome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="15dp"
+        android:gravity="center"
+        android:textColor="#3F51B5"
+        android:textSize="24sp" />
 
-    <Button
-        android:id="@+id/button3"
+    <View
+        android:id="@+id/divider2"
         android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginBottom="10dp"
+        android:background="?android:attr/listDivider" />
+
+    <TextView
+        android:id="@+id/tvMyAttachConsumerName"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:onClick="Test"
-        android:text="Test" />
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="10dp"
+        android:drawableLeft="@drawable/twotone_person_24"
+        android:drawablePadding="10dp"
+        android:text="Full Name"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/tvAttachPhone"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="10dp"
+        android:drawableLeft="@drawable/twotone_phone_android_24"
+        android:drawablePadding="10dp"
+        android:text="Phone number"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/tvAttachAddress"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="10dp"
+        android:drawableLeft="@drawable/twotone_location_on_24"
+        android:drawablePadding="10dp"
+        android:text="Address"
+        android:textSize="18sp" />
+
+    <View
+        android:id="@+id/dividerr"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="?android:attr/listDivider" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="10dp"
+        android:layout_height="wrap_content"
+        android:text="Search" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:padding="5dp">
+
+        <EditText
+            android:id="@+id/etSearchBardode"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+
+            android:drawableLeft="@drawable/twotone_qr_code_24"
+            android:drawablePadding="10dp"
+            android:hint="Barcode"
+            android:inputType="number"
+            android:maxLength="6" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="SearchByBarcode"
+            app:icon="@drawable/outline_search_24"
+            app:iconGravity="textStart"
+            app:iconSize="30dp" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tvAttachError"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textColor="#B71C1C"
-        android:textSize="18dp" />
+        android:textSize="16dp"
+        android:gravity="center"
+        android:textColor="#B71C1C" />
+
+    <LinearLayout
+        android:id="@+id/llSubs"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="visible">
+
+        <TextView
+            android:id="@+id/textView16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="Subscription No."
+            android:textColor="#0D47A1" />
+
+        <TextView
+            android:id="@+id/tvSubsNumber"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginBottom="10dp"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/textView17"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="Subscription Type"
+            android:textColor="#0D47A1" />
+
+        <TextView
+            android:id="@+id/tvSubsType"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginBottom="10dp"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/textView18"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="Subscription Address"
+            android:textColor="#0D47A1" />
+
+        <TextView
+            android:id="@+id/tvSubsAddress"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginBottom="10dp"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+android:layout_margin="10dp"
+            android:text="Send Request" />
+
+    </LinearLayout>
+
 </LinearLayout>
