--- a/app/src/main/res/layout/activity_my_subscriptions.xml
+++ b/app/src/main/res/layout/activity_my_subscriptions.xml
@@ -77,6 +77,7 @@
         android:id="@+id/tvMysubsError"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:textColor="#B71C1C" />
 
 </LinearLayout>
