--- a/app/src/main/res/layout/activity_attach_subscriptions.xml
+++ b/app/src/main/res/layout/activity_attach_subscriptions.xml
@@ -115,6 +115,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:paddingTop="10dp"
+        android:layout_margin="10dp"
+        android:background="#BCCEEC"
         android:visibility="visible">
 
         <TextView
@@ -169,7 +172,8 @@
             android:id="@+id/button4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-android:layout_margin="10dp"
+            android:layout_margin="10dp"
+            android:onClick="SendRequest"
             android:text="Send Request" />
 
     </LinearLayout>
