--- a/app/src/main/res/layout/activity_my_subscriptions.xml
+++ b/app/src/main/res/layout/activity_my_subscriptions.xml
@@ -68,16 +68,22 @@
         android:background="?android:attr/listDivider" />
 
     <TextView
+        android:id="@+id/tvMysubsError"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="14dp"
+        android:textColor="#B71C1C" />
+
+    <TextView
         android:id="@+id/textView15"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Subscriptions" />
 
-    <TextView
-        android:id="@+id/tvMysubsError"
+    <ListView
+        android:id="@+id/lvSubscriptions"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textColor="#B71C1C" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
