--- a/app/src/main/res/layout/activity_my_subscriptions.xml
+++ b/app/src/main/res/layout/activity_my_subscriptions.xml
@@ -10,61 +10,71 @@
     <TextView
         android:id="@+id/tvMySubsWelcome"
         android:layout_width="match_parent"
-        android:textSize="24sp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="15dp"
         android:gravity="center"
         android:textColor="#3F51B5"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="15dp"
-        android:layout_height="wrap_content" />
+        android:textSize="24sp" />
 
     <View
-        android:layout_marginBottom="10dp"
         android:id="@+id/divider3"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginBottom="10dp"
         android:background="?android:attr/listDivider" />
 
-    <TextView
-        android:id="@+id/tvMySubsConsumerName"
-        android:layout_width="250dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginBottom="10dp"
-        android:drawableLeft="@drawable/twotone_person_24"
-        android:drawablePadding="10dp"
-        android:text="Full Name"
-        android:textSize="18sp" />
+        android:layout_margin="10dp"
+        android:background="#BCCEEC"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-    <TextView
-        android:id="@+id/tvMySubsPhone"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginBottom="10dp"
-        android:drawableLeft="@drawable/twotone_phone_android_24"
-        android:drawablePadding="10dp"
-        android:text="Phone number"
-        android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/tvMySubsAddress"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginBottom="10dp"
-        android:drawableLeft="@drawable/twotone_location_on_24"
-        android:drawablePadding="10dp"
-        android:text="Address"
-        android:textSize="18sp" />
+        <TextView
+            android:id="@+id/tvMySubsConsumerName"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="10dp"
+            android:drawableLeft="@drawable/twotone_person_24"
+            android:drawablePadding="10dp"
+            android:text="Full Name"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tvMySubsPhone"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="10dp"
+            android:drawableLeft="@drawable/twotone_phone_android_24"
+            android:drawablePadding="10dp"
+            android:text="Phone number"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tvMySubsAddress"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="10dp"
+            android:drawableLeft="@drawable/twotone_location_on_24"
+            android:drawablePadding="10dp"
+            android:text="Address"
+            android:textSize="18sp" />
+    </LinearLayout>
 
     <View
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:background="?android:attr/listDivider" />
 
     <TextView
@@ -72,14 +82,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="14dp"
-        android:textColor="#B71C1C" />
+        android:textColor="#B71C1C"
+        android:textSize="14dp" />
 
     <TextView
         android:id="@+id/textView15"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Subscriptions" />
+        android:layout_marginLeft="30dp"
+        android:text="Subscriptions"
+        android:textColor="@color/purple_700"
+        android:textSize="16dp"
+        android:textStyle="bold" />
 
     <ListView
         android:id="@+id/lvSubscriptions"
