--- a/app/src/main/res/layout/subscription_item.xml
+++ b/app/src/main/res/layout/subscription_item.xml
@@ -16,8 +16,10 @@
             android:layout_gravity="center"
             android:layout_margin="20dp"
             android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:text="" />
+            android:textStyle="bold"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="test" />
     </LinearLayout>
 
     <LinearLayout
@@ -70,7 +72,7 @@
             android:id="@+id/textView191"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Barcode"
+            android:text="Type"
             android:textColor="@color/purple_500" />
 
         <TextView
@@ -85,7 +87,7 @@
             android:id="@+id/textView211"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Subscription No"
+            android:text="Address"
             android:textColor="@color/purple_500" />
 
         <TextView
