--- a/app/src/main/res/layout/invoice_item.xml
+++ b/app/src/main/res/layout/invoice_item.xml
@@ -41,7 +41,7 @@
                 android:padding="10dp">
 
                 <TextView
-                    android:id="@+id/textView1911"
+                    android:id="@+id/textView2000"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Year"
@@ -56,7 +56,7 @@
                     android:text="TextView" />
 
                 <TextView
-                    android:id="@+id/textView2111"
+                    android:id="@+id/textView2001"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Cycle"
@@ -80,22 +80,24 @@
                 android:padding="10dp">
 
                 <TextView
-                    android:id="@+id/textView1912"
+                    android:id="@+id/textView2002"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Value"
                     android:textColor="@color/purple_500" />
 
                 <TextView
+                    android:textStyle="bold"
                     android:id="@+id/tvItemValue"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="30dp"
-                    android:layout_marginBottom="10dp"
+                    android:textColor="@color/purple_500" />
+                android:layout_marginBottom="10dp"
                     android:text="TextView" />
 
                 <TextView
-                    android:id="@+id/textView2112"
+                    android:id="@+id/textView2003"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Status"
