--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -106,6 +106,7 @@
                     android:layout_width="130dp"
                     android:layout_height="130dp"
                     android:layout_marginRight="25dp"
+                    android:onClick="GotoClearanceRequest"
                     app:icon="@drawable/twotone_assignment_turned_in_24"
                     app:iconGravity="textStart"
                     app:iconSize="60dp" />
