testing of convert photo to byte array

--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -127,6 +127,7 @@
                     android:id="@+id/button101"
                     android:layout_width="130dp"
                     android:layout_height="130dp"
+                    android:onClick="GotoNewMeter"
                     app:icon="@drawable/twotone_gas_meter_24"
                     app:iconGravity="textStart"
                     app:iconSize="60dp" />
