--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,102 +11,159 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:layout_marginBottom="30dp"
-        android:text="Register new Consumer"
-        android:textSize="25dp"
-        android:textStyle="bold"
         android:layout_gravity="center"
-        android:textColor="#3F51B5"/>
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        android:text="Register new Consumer"
+        android:textColor="#3F51B5"
+        android:textSize="25dp"
+        android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:ems="10"
-        android:text="Consumer Full Name"
-        android:textColor="#3F51B5"/>
+        android:layout_margin="15dp"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="5dp">
 
-    <EditText
-        android:id="@+id/etConsumerName"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:inputType="text" />
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:ems="10"
-        android:text="Consumer Address"
-        android:textColor="#3F51B5"/>
-    <EditText
-        android:id="@+id/etConsumerAddress"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:inputType="text" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:ems="10"
-        android:text="Consumer Phone Number"
-        android:textColor="#3F51B5"/>
-    <EditText
-        android:id="@+id/etConsumerPhone"
-        android:layout_width="250dp"
-        android:maxLength="10"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:inputType="phone" />
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:ems="10"
-        android:text="User Name"
-        android:textColor="#3F51B5" />
-    <EditText
-        android:id="@+id/etRegisterUserName"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:inputType="text" />
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:ems="10"
+                android:text="Consumer Full Name"
+                android:textColor="#3F51B5" />
 
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:ems="10"
-        android:text="Password"
-        android:textColor="#3F51B5" />
-    <EditText
-        android:id="@+id/etRegisterPassword"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:inputType="textPassword" />
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:ems="10"
-        android:text="Confirm Password"
-        android:textColor="#3F51B5" />
-    <EditText
-        android:id="@+id/etPasswordConfirm"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:inputType="textPassword" />
+            <EditText
+                android:id="@+id/etConsumerName"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:inputType="text" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:ems="10"
+                android:text="Consumer Address"
+                android:textColor="#3F51B5" />
+
+            <EditText
+                android:id="@+id/etConsumerAddress"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:inputType="text" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:ems="10"
+                android:text="Consumer Phone Number"
+                android:textColor="#3F51B5" />
+
+            <EditText
+                android:id="@+id/etConsumerPhone"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:inputType="phone"
+                android:maxLength="10" />
+
+
+            <TextView
+                android:id="@+id/tvAge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:layout_marginBottom="10dp"
+                android:text="Age" />
+
+            <SeekBar
+                android:id="@+id/seekBarAge"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginBottom="10dp"
+                android:max="100"
+                android:min="18" />
+
+
+            <ToggleButton
+                android:id="@+id/toggleGender"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginStart="50dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginBottom="10dp"
+                android:background="#304FFE"
+                android:textColor="#FBF7F7"
+                android:textOff="Femal"
+                android:textOn="Male" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:ems="10"
+                android:text="User Name"
+                android:textColor="#3F51B5" />
+
+            <EditText
+                android:id="@+id/etRegisterUserName"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:inputType="text" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:ems="10"
+                android:text="Password"
+                android:textColor="#3F51B5" />
+
+            <EditText
+                android:id="@+id/etRegisterPassword"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:inputType="textPassword" />
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:ems="10"
+                android:text="Confirm Password"
+                android:textColor="#3F51B5" />
+
+            <EditText
+                android:id="@+id/etPasswordConfirm"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_marginBottom="10dp"
+                android:inputType="textPassword" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
     <TextView
         android:id="@+id/tvError"
         android:layout_width="wrap_content"
@@ -124,7 +181,6 @@
         android:layout_marginTop="10dp"
         android:onClick="RegisterNewConsumer"
         android:text="Register" />
-
 
 
 </LinearLayout>
